# whoami

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-site.yml  deploy-site.yml  fetch-all.yml  sync-gist.yml  validate.yml
data/dev_to/: README.md
data/dev_to/adriens/: _index.csv  _stats.json
data/dev_to/optnc/: _index.csv  _stats.json
data/dockerhub/: README.md
data/dockerhub/rastadidi/: _index.csv  _stats.json
data/github/: README.md
data/github/adriens/: _index.csv  _stats.json
data/goodreads/: README.md
data/goodreads/124105866/: _index.csv
data/hackster/: README.md
data/hackster/adriensales/: _index.csv  _stats.json
data/huggingface/: README.md
data/huggingface/rastadidi/: _datasets_index.csv  _spaces_index.csv
data/iot/: README.md
data/iot/adriens/: _index.csv  _stats.json
data/kaggle/: README.md
data/linkedin/: README.md
data/pypi/: README.md
data/stagiaires/: README.md
data/youtube/: README.md
data/zenodo/: README.md
manual/: resume.json
output/: knowledge-base.md
output/okf/: index.md  viz.html
scripts/: audit-tags.py  build-knowledge-base.py  build-okf-viz.py  build-okf.py  fetch-devto-articles.py  fetch-dockerhub.py  fetch-github-repos.py  fetch-goodreads.py  fetch-hackster-projects.py  fetch-huggingface.py  fetch-kaggle-datasets.py  fetch-kaggle-notebooks.py  fetch-pypi-packages.py  fetch-youtube-channel.py  fetch-youtube-playlists.py  validate-json-resume.py  yt-transcript.py
site/: astro.config.mjs  copy-okf.mjs  package.json
(+1297 files in other folders)
