[project]
name = "whoami"
version = "0.1.0"
description = "CV Adrien Sales — validation et outillage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "huggingface-hub>=1.16.1",
    "kaggle>=2.0.0",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "yt-dlp>=2026.7.4",
    "youtube-transcript-api>=1.2.4",
]
